--- a/ext/polars/Cargo.toml
+++ b/ext/polars/Cargo.toml
@@ -21,6 +21,10 @@ polars-utils = "=0.41.3"
 serde_json = "1"
 smartstring = "1"
 
+[dependencies.rb-sys]
+version = "0.9.98"
+features = ["stable-api-compiled-fallback"]
+
 [dependencies.polars]
 version = "=0.41.3"
 features = [
